--- a/basic-html-drills/index.html
+++ b/basic-html-drills/index.html
@@ -67,9 +67,8 @@
 
             Lorem ipsum dolor <b>sit amet consectetur</b>
             adipisicing elit. Iste adipisci porro 
-            aliquid, obcaecati veniam dignissimos
-            totam. 
-            <br>
+            aliquid, <i>obcaecati veniam dignissimos
+            totam.</i>
             <b>Architecto ex sed, <i>porro esse 
             totam</i>, optio consectetur debitis iste 
             commodi illum et natus!</b>
