--- a/html-potluck-music/mgk.html
+++ b/html-potluck-music/mgk.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
+        <a href="index.html"><font size="3">Home</font></a>
         <h1>Machine Gun Kelly</h1>
         <hr>
         <h3>Now Playing:</h3>
@@ -31,7 +32,6 @@
             &nbsp;
             2:19
         </p>
-        
         
         <p>
             <img
