--- a/html-potluck-music/summertrip.html
+++ b/html-potluck-music/summertrip.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
+        <a href="index.html"><font size="3">Home</font></a>
         <h1>Off-Key Antics</h1>
         <img
             src="images/offkey.jpg"
@@ -16,7 +17,7 @@
         <br>
         <i>Playlist for my friends on our wild adventure across the country...</i>
         <br>
-        <b>Graci - 53 songs,</b> 2 hr 40 min
+        <b>Graci - 28 songs,</b> 1 hr 24 min
         <hr>
         <p> 
             <img
@@ -167,5 +168,135 @@
             <i><font size="4">Bishop Briggs</font></i>
             &nbsp;
             3:13
+        </p>
+        <p> 
+            <img
+            src="images/howcaniforget.jpg" width="35"
+            >
+            <b><font size="5">How Can I Forget Me</font></b>
+            &nbsp;
+            <i><font size="4">MKTO</font></i>
+            &nbsp;
+            2:57
+        </p>
+        <p> 
+            <img
+            src="images/ilikemebetter.jpg" width="35"
+            >
+            <b><font size="5">I Like Me Better</font></b>
+            &nbsp;
+            <i><font size="4">Lauv</font></i>
+            &nbsp;
+            3:17
+        </p>
+        <p> 
+            <img
+            src="images/ilived.jpg" width="35"
+            >
+            <b><font size="5">I Lived</font></b>
+            &nbsp;
+            <i><font size="4">OneRepublic</font></i>
+            &nbsp;
+            3:55
+        </p>
+        <p> 
+            <img
+            src="images/imnotcrazy.jpg" width="35"
+            >
+            <b><font size="5">I'm Not Crazy</font></b>
+            &nbsp;
+            <i><font size="4">charlieonnafriday</font></i>
+            &nbsp;
+            2:42
+        </p>
+        <p> 
+            <img
+            src="images/infatuated.jpg" width="35"
+            >
+            <b><font size="5">Infatuated - Remix </font></b>
+            &nbsp;
+            <i><font size="4">Tom Shawcroft, ChrispyD</font></i>
+            &nbsp;
+            2:06
+        </p>
+        <p> 
+            <img
+            src="images/iwalkthisearthallbymyself.jpg" width="35"
+            >
+            <b><font size="5">i walk this earth all by myself</font></b>
+            &nbsp;
+            <i><font size="4">EKKSTACY</font></i>
+            &nbsp;
+            2:26
+        </p>
+        <p> 
+            <img
+            src="images/jenny.jpg" width="35"
+            >
+            <b><font size="5">Jenny</font></b>
+            &nbsp;
+            <i><font size="4">TWINSICK</font></i>
+            &nbsp;
+            3:17
+        </p>
+        <p> 
+            <img
+            src="images/madhoes.jpg" width="35"
+            >
+            <b><font size="5">mad hoes</font></b>
+            &nbsp;
+            <i><font size="4">TAELA</font></i>
+            &nbsp;
+            2:44
+        </p>
+        <p> 
+            <img
+            src="images/me&myfriends.jpg" width="35"
+            >
+            <b><font size="5">Me & My Friends</font></b>
+            &nbsp;
+            <i><font size="4">Munn, Jude Barclay, Fortune</font></i>
+            &nbsp;
+            2:39
+        </p>
+        <p> 
+            <img
+            src="images/missyoualittle.jpg" width="35"
+            >
+            <b><font size="5">Miss You a Little (ft. lovelytheband)</font></b>
+            &nbsp;
+            <i><font size="4">Bryce Vine, lovelytheband</font></i>
+            &nbsp;
+            2:48
+        </p>
+        <p> 
+            <img
+            src="images/monsters.jpg" width="35"
+            >
+            <b><font size="5">Monsters (ft. blackbear)</font></b>
+            &nbsp;
+            <i><font size="4">All Time Low, blackbear</font></i>
+            &nbsp;
+            2:54
+        </p>
+        <p> 
+            <img
+            src="images/nextyear.jpg" width="35"
+            >
+            <b><font size="5">Next Year (ft. Windser)</font></b>
+            &nbsp;
+            <i><font size="4">Macklemore, Windser</font></i>
+            &nbsp;
+            2:54
+        </p>
+        <p> 
+            <img
+            src="images/ohmylove.jpg" width="35"
+            >
+            <b><font size="5">Oh My Love</font></b>
+            &nbsp;
+            <i><font size="4">The Score</font></i>
+            &nbsp;
+            3:38
         </p>
     </body>
