--- a/about.html
+++ b/about.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link href="z-css/about.css" rel="stylesheet">
 </head>
 <body>
     <h1>About Me</h1>
+ 
     <a href="index.html">Home</a>
     <a href="gallery.html">Gallery</a>
     <a href="about.html">About Me</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a>   
+
+    <div class="about">
+        
+        <h1>Howdy, My name is Graci Edinger!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quasi voluptatem quod fugit facilis rem velit optio ducimus hic aspernatur animi mollitia iure odio, sit fugiat laborum sint a at?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis alias repudiandae asperiores hic, ut minus eos sapiente libero fuga inventore neque vel magni veniam ipsum distinctio. Ratione consequuntur voluptatem aliquam.</p>
+    </div>
+    <div class="imageofme">
+        <img
+            src="z-images/Ocean-2.jpg"
+            alt="Picture of Me"
+        >
+    </div>
+
 </body>
 </html>
