about fixes and shop

--- a/about.html
+++ b/about.html
@@ -23,12 +23,14 @@
         <p>
             I've always had a creative side to me, but have always been a bit of a computer nerd. So I found the best of the both worlds!
         </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis alias repudiandae asperiores hic, ut minus eos sapiente libero fuga inventore neque vel magni veniam ipsum distinctio. Ratione consequuntur voluptatem aliquam.</p>    
+        <p>
+        A few years ago, maybe like 5-7 years, I got really into photography. This then led to learning about Lightroom. And from there out I was sucked into using Adobe products. So I slowly taught myself how to use them in a general manner. Every now and then doing a project that I would use to sell, etc. Then I decided this could be something I might want to do in the long run, so here we are. 
+        </p>    
         </div>
         
         <div class="imageofme">
         <img
-            src="z-images/Ocean-2.jpg"
+            src="z-images/about-me-image.jpg"
             alt="Picture of Me"
         >
         </div>
