--- a/exercises/product-showcase/index.html
+++ b/exercises/product-showcase/index.html
@@ -3,10 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Product</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <div id="section1">
+            <div class="contain1">
+            <h1>Get your Beauty Serum's</h1>
+            <img src="images/mainpage.jpg" alt="">
+            <p>Beauty serums are potent elixirs that have revolutionized skincare routines, offering a concentrated boost of nourishing and active ingredients. These lightweight and fast-absorbing formulations are designed to target specific skin concerns, such as wrinkles, dark spots, or hydration, delivering a higher concentration of beneficial compounds than traditional moisturizers. Packed with vitamins, antioxidants, and peptides, beauty serums penetrate deeply into the skin, promoting rejuvenation and aiding in the repair of skin cells. Whether focused on brightening, firming, or smoothing, these serums have become an essential step in the quest for a radiant and youthful complexion, offering a luxurious and effective approach to achieving skin's optimal health and beauty.</p>
+            <a href="#" class="buy">Buy Here</a>
+            </div>
+        </div>
+        
         
     </body>
 </html>
