--- a/exercises/product-showcase/index.html
+++ b/exercises/product-showcase/index.html
@@ -9,13 +9,40 @@
     <body>
         <div id="section1">
             <div class="contain1">
-            <h1>Get your Beauty Serum's</h1>
-            <img src="images/mainpage.jpg" alt="">
-            <p>Beauty serums are potent elixirs that have revolutionized skincare routines, offering a concentrated boost of nourishing and active ingredients. These lightweight and fast-absorbing formulations are designed to target specific skin concerns, such as wrinkles, dark spots, or hydration, delivering a higher concentration of beneficial compounds than traditional moisturizers. Packed with vitamins, antioxidants, and peptides, beauty serums penetrate deeply into the skin, promoting rejuvenation and aiding in the repair of skin cells. Whether focused on brightening, firming, or smoothing, these serums have become an essential step in the quest for a radiant and youthful complexion, offering a luxurious and effective approach to achieving skin's optimal health and beauty.</p>
+            <h1>Get your Happyface Foundation</h1>
+            <h3>Spktrm Beauty</h3>
+            <img src="images/mainpage.jpg" alt="Beauty Serum">
+            <p>
+                SPKTRM Beauty is a modern and innovative cosmetics brand that has gained popularity for its unique approach to beauty products. With a focus on inclusivity and individuality, SPKTRM Beauty offers a diverse range of makeup and skincare items designed to celebrate and enhance a wide spectrum of skin tones and types.
+            </p>
+            <p>
+                What sets SPKTRM Beauty apart is its commitment to embracing the full spectrum of beauty, catering to people of all backgrounds and identities. The brand's product lineup reflects this ethos, featuring a rich array of shades and formulations that cater to various skin tones, from the fairest to the deepest.
+            </p>
             <a href="#" class="buy">Buy Here</a>
             </div>
         </div>
-        
-        
+    <div id="section2">
+        <div class="contain2">
+        <img src="images/page1.jpg" alt="Beauty Serum">
+        <p>
+            Beyond its dedication to diversity, SPKTRM Beauty is known for its high-quality and cruelty-free formulations. The brand places emphasis on using ethically sourced ingredients and sustainable packaging, aligning with the growing demand for environmentally conscious beauty choices.
+        </p>
+        <p>
+            In an industry often criticized for narrow standards of beauty, SPKTRM Beauty shines as a trailblazer by embracing individuality and fostering a sense of empowerment through its products. Whether it's their foundation shades that match an extensive range of skin tones or their skincare line tailored to different needs, SPKTRM Beauty is making its mark by redefining beauty standards and promoting self-expression for all. 
+        </p>
+        </div>
+    </div>
+    <div id="section3">
+        <div class="contain3">
+        <img src="images/page2.jpg" alt="Beauty Serum">
+        <p>
+            More than just products, SPKTRM Beauty fosters a sense of community. It empowers individuals to express themselves authentically and confidently. By challenging traditional beauty norms, the brand is igniting conversations about representation, self-love, and the power of embracing one's unique identity.
+        </p>
+        <p>
+            In a world where conformity has often been the norm, SPKTRM Beauty emerges as a guiding light, encouraging people to step out of the shadows and into their own vibrant spectrum. It's not just about makeup; it's about embracing the full spectrum of who we are.
+        </p>
+        <a href="#" class="buy">Buy Here</a>
+        </div>
+    </div>
     </body>
 </html>
