--- a/exercises/wikipage-3/index.html
+++ b/exercises/wikipage-3/index.html
@@ -118,6 +118,12 @@
                         <td>2017-01-10</td>
                     </tr>
                     <tr>
+                      <td><span class="fi fi-se"></span> cArn</td>
+                      <td>Patrik Sättermon</td>
+                      <td>CGO</td>
+                      <td>2012-04-??</td>
+                    </tr>
+                    <tr>
                       <td><span class="fi fi-gb"></span> mini <i class="fa-solid fa-star" style="color: #caa0094d;"></i></td>
                       <td>Jacob Harris</td>
                       <td>Head Coach</td>
@@ -134,6 +140,12 @@
                         <td>Youenn Rocaboy</td>
                         <td>Performance Coach</td>
                         <td>2023-02-13</td>
+                    </tr>
+                    <tr>
+                        <td><span class="fi fi-us"></span> Anderzz</td>
+                        <td>	Martin Schelasin</td>
+                        <td>Strategic Consultant</td>
+                        <td>2023-08-07</td>
                     </tr>
                   </tbody>
                 </table>
@@ -186,6 +198,14 @@
                         <td>Superdome 2022</td>
                         <td>2:0 ACEND</td>
                         <td>$12,000</td>
+                      </tr>
+                      <tr>
+                        <td>2022-09-13</td>
+                        <td>5th-6th</td>
+                        <td>S-Tier</td>
+                        <td>VALORANT Champions 2022</td>
+                        <td>1:2 DRX</td>
+                        <td>$60,000</td>
                       </tr>
                   </tbody>
                 </table>
