--- a/exercises/wikipage-3/index.html
+++ b/exercises/wikipage-3/index.html
@@ -21,6 +21,7 @@
               <li><a href="#players">Players</a></li>
               <li><a href="#organization">Organization</a></li>
               <li><a href="#achievements">Achievements</a></li>
+              <li><a href="#tournaments">Tournaments</a></li>
               <li><a href="#gallery">Gallery</a></li>
             </ul>
           </nav>
@@ -35,11 +36,17 @@
           <section id="about">
             <h2>About FNATIC Valorant Sports Team</h2>
             <hr>
-            <p>
+            <p class="indent">
               FNATIC are one of the longest serving organizations in professional esports, having been founded in 2004 in London, England. Their VALORANT division was established in February 2021 aftering signing SUMN FC. Fnatic are notoriously known for their dominance in Counter-Strike throughout their tenure, they have also picked up mutliple titled in League of Legends. Fnatic also compete in Dota 2, Halo, Rainbow Six: Seige, Apex Legends and FIFA.
             </p>
-            <p>
+            <p class="indent">
               FNATIC's Valorant team is admired for their teamwork, innovative strategies, and individual skill. They often engaged in exciting matches against other established esports organizations, making their games a highlight of the Valorant competitive scene.
+            </p>
+            <p class="indent">
+              "Our history is unparalleled. Founded in 2004, we are one of the most successful esports brands of all time, winning more tier 1 game tournaments than any other team globally. Winning is in our DNA. Today, driven by our ability to advance esports performance, our strong results, as well as a growing fanbase, we’re the world's third most-watched esports brand in 2020 - esports’ breakthrough year. Fast Company also deemed us 6th in the Most Innovative Gaming Companies of 2021.
+              </p>
+              <p>
+              It’s inevitable, then, that some of the world’s most forward-thinking brands - including AMD, BMW, Hisense, Monster and Jack Link's - choose to communicate to young people through Fnatic."
             </p>
           </section>
           <section id="players">
@@ -83,11 +90,32 @@
                       </tr> 
                   </tbody>
                 </table>
-              </div>
+            </div>
+            <h3><span class="fi fi-gb"></span> Boaster - Jake Howlett <i class="fa-solid fa-star" style="color: #caa0094d;"></i></h3>
+            <p class="indent">
+              The captain of the Valorant team, Jake "Boaster" Howlett is currently the fragging IGL of the team. He previously spent time in CS:GO and LOL with Excel but has found his stride in the Tier 1 scene of European Valorant.
+            </p>
+            <h3><span class="fi fi-fi"></span> Derke - Nikita Sirmitev</h3>
+            <p class="indent">
+              Previously known as Derkeps from his time in CS:GO, Derke is a young Finnish FPS player. He was an up-and-coming awper in CS:GO and these skills have translated perfectly to Valorant, quickly becoming one of the most feared Jett players in the region.
+            </p>
+            <h3><span class="fi fi-tr"></span> Alfajer - Emir Ali Beder</h3>
+            <p class="indent">
+              Emir "Alfajer" Beder (born June 10, 2005) is a Turkish player who is currently playing for Fnatic.
+            </p>
+            <h3><span class="fi fi-se"></span> Leo - Leo Jannesson</h3>
+            <p class="indent">
+              Leo "Leo" Jannesson (born December 15, 2003) is a Swedish player who is currently playing for Fnatic.
+            </p>
+            <h3><span class="fi fi-ru"></span> Chronicle - Timofey Khromov</h3>
+            <p class="indent">
+              Timofey "Chronicle" Khromov (born August 16, 2002) is a Russian player who is currently playing for Fnatic.
+            </p>
           </section>
           <section id="organization">
             <h2>Organization</h2>
             <hr>
+            <h3>Current</h3>
             <div class="table-container-3">
                 <table>
                   <thead>
@@ -150,6 +178,17 @@
                   </tbody>
                 </table>
               </div>
+              <h3><span class="fi fi-gb"></span> CEO - Sam Mathews</h3>
+              <p class="indent">
+                The CEO of Fnatic Esports, as of September 2021, is Sam Mathews. Sam Mathews is a prominent figure in the esports industry, known for co-founding Fnatic in 2004. Under his leadership, Fnatic has become one of the most successful and recognizable esports organizations globally. Mathews' vision and strategic decisions have played a crucial role in guiding the organization's growth, securing numerous championship titles across various competitive games, and expanding its reach through partnerships and sponsorships. His dedication to promoting esports on a global scale and his ability to adapt to the rapidly evolving industry landscape have solidified his reputation as a pioneering force in the esports realm. 
+              </p>
+              <h3><span class="fi fi-gb"></span> Head Coach - Jacob Harris</h3>
+              <p class="indent">
+                Jacob "mini" Harris (born July 12, 1994) is a British coach for Fnatic. He is a former Counter-Strike: Source and Counter-Strike: Global Offensive player.
+              </p>
+              <p class="indent">
+                Mini is the English head coach of the Valorant team. Him duoing up with Boaster on SUMN FC made him one of the most respected coaches in Valorant. He also played a key role in the restructuring of the team and the new signings that have turned Fnatic into a top EU team again.
+              </p>
           </section>
           <section id="achievements">
             <h2>Achievements</h2>
@@ -211,7 +250,30 @@
                 </table>
               </div>
           </section>
-        
+          <section id="tournaments">
+            <h2>Tournaments</h2>
+            <hr>
+            <h3>VALORANT Champions 2023</h3>
+            <p class="indent">
+              Will the <span id="dynasty">Dynasty</span> continue.... The FNATIC Valorant team has emerged as a force to be reckoned with in the 2023 Valorant Champions. With a roster comprised of exceptional talent and seasoned veterans, FNATIC has showcased their remarkable synergy and adaptability throughout the tournament. Led by a strategic and visionary captain, the team's gameplay revolves around calculated tactics and swift execution. Their meticulous preparation and deep understanding of the game's mechanics are evident in every round they play, often resulting in stunning victories against formidable opponents. FNATIC's dedication to innovation is reflected in their ingenious agent compositions and innovative strategies that keep their adversaries on their toes. As they navigate the intense competition of Valorant Champions 2023, FNATIC stands as a symbol of resilience, sportsmanship, and the unrelenting pursuit of excellence in the world of esports.
+            </p>
+            <p class="indent">
+              As the tournament reached its penultimate moment, the FNATIC team finds themselves on the cusp of a defining showdown—a chance to etch their legacy in the annals of esports history. Their upcoming match on Thursday, August 24, 2023, carries the weight of their journey and the aspirations of their global fanbase, who have traveled far and wide to witness this pivotal clash. The anticipation among the thousands of dedicated fans converging from across the world is palpable, their fervor a testament to FNATIC's widespread impact and the unparalleled sense of community forged through the shared love of the game. On this grand stage, FNATIC stands poised to seize the opportunity, not only to win a championship but to solidify their place as an embodiment of teamwork, perseverance, and the electrifying spirit of competition.
+            </p>
+            <h3>VCT LOCK//IN São Paulo 2023</h3>
+            <p class="indent">
+              On Saturday 4th March 2023, FNATIC were officially crowned the first ever Valorant LOCK//IN Champions after battling it out with the most elite teams from across the world. LOCK//IN is the highly anticipated global tournament that brings together all 32 top tier franchised teams from across the world to compete against each other in a single elimination bracket.
+            </p>
+            <p class="indent">
+              From February 13th until March 3rd, the 32 franchise teams were brought together from around the world to battle it out across three weeks of intense competition in São Paulo. Heading into the final, FNATIC went uncontested in their best-of-three and best-of-five match-ups, knocking out every single team it faced without ever losing a map (going 2-0 against Sentinels, 2-0 against FURIA, 2-0 against 100 Thieves and 3-0 against Natus Vincere). After dominating the bracket, and not losing a single map, Fnatic advanced to the Grand Final against home crowd favourites LOUD.
+            </p>
+            <p class="indent">
+              In a story that was written for the ages, and that will go down in Valorant Esports history, FNATIC continued their winning streak going 2-0 in the best-of-five match up. However, things got scary for the Black and Orange organisation after dropping the following two maps to make it 2-2 heading into one final decider.
+            </p>
+            <p class="indent">
+              In the final map, Icebox, the map that FNATIC’s team has become world famous for dominating, the team quickly fell round after round resulting in a 3-11 score which seemed impossible to turn around. After a tactical time out, FNATIC’s IGL Boaster turned around the momentum and switched the team back on, winning round after round in a historic comeback. After equalising at 11-11, FNATIC closed out the show with a 14-12 to win the trophy in a 3-2 triumph.
+            </p>
+          </section>
         <section id="gallery">
             <h2>Gallery</h2>
             <hr>
@@ -238,7 +300,7 @@
         </section>
       </div>
         <footer>
-            <p>&copy; 2023 FNATIC Valorant Sports Team</p>
+            <p>&copy; 2023 FNATIC ESports</p>
           </footer>
     </body>
 </html>
