--- a/exercises/wikipage-3/index.html
+++ b/exercises/wikipage-3/index.html
@@ -116,7 +116,7 @@
             <h2>Organization</h2>
             <hr>
             <h3>Current</h3>
-            <div class="table-container-3">
+            <div class="table-org">
                 <table>
                   <thead>
                     <tr>
@@ -193,7 +193,7 @@
           <section id="achievements">
             <h2>Achievements</h2>
             <hr>
-            <div class="table-container-2">
+            <div class="table-achievements">
                 <table>
                   <thead>
                     <tr>
