--- a/exercises/wikipage-3/index.html
+++ b/exercises/wikipage-3/index.html
@@ -53,7 +53,7 @@
             <h2>Player Roster</h2>
             <hr>
             <h3>Active Roster</h3>
-            <div class="table-container">
+            <div class="table-player">
                 <table>
                   <thead>
                     <tr>
