08/22 contact and about me

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             </p>
             
             </ul>
-            <p>Feel free to contact me at <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+            <p>Feel free to contact me at <a href="mailto:youremail@example.com">email@email.com</a></p>
         </div>
     </section>
     
