--- a/exercises/blog-with-sidebar/index.html
+++ b/exercises/blog-with-sidebar/index.html
@@ -67,7 +67,7 @@
                         Snow leopards are more than just magnificent felines; they are emblematic of the wild and untamed spirit of the high mountains. As we strive to secure their future, we must recognize that their survival is intertwined with the health of their ecosystems and the well-being of the communities living alongside them. By working together, we can ensure that the snow leopard's haunting call continues to echo across the peaks for generations to come. 
                     </p>
                     <p class="indent">
-                        
+                        The journey to secure the future of snow leopards is ongoing, requiring sustained efforts from all corners of the globe. By combating poaching, protecting habitats, promoting responsible tourism, and supporting local communities, we can ensure that these majestic cats continue to grace the mountains with their presence, enchanting us with their elusive beauty for generations to come.
                     </p>
 
                 </div>
@@ -76,7 +76,7 @@
         </div>
         <footer>
             <div class="footer-content">
-                <p>&copy; 2023 Your Website. All rights reserved.</p>
+                <p>&copy; 2023 Nature Website. All rights reserved.</p>
             </div>
         </footer>
     </body>
