--- a/exercises/three-heros/hero3.html
+++ b/exercises/three-heros/hero3.html
@@ -9,9 +9,9 @@
     <body>
         <body>
             <div id="hero-3">
-                <h1>Sup?</h1>
-                <a href="hero1.html">REQUEST ASSISTANCE</a>
-                <a href="hero2.html">REQUEST ASSISTANCE</a>
+                <h1>NEW DRINKS</h1>
+                <a href="hero1.html">WELLNESS DRINK</a>
+                <a href="hero2.html">COFFEE</a>
             </div>
         </body>
     </body>
