--- a/exercises/three-heros/hero3.html
+++ b/exercises/three-heros/hero3.html
@@ -10,8 +10,9 @@
         <body>
             <div id="hero-3">
                 <h1>NEW DRINKS</h1>
-                <a href="hero1.html">WELLNESS DRINK</a>
-                <a href="hero2.html">COFFEE</a>
+                <p>Discover the amazing new flavors of the world!</p>
+                <a href="hero1.html" class="cta-button">WELLNESS DRINK</a>
+                <a href="hero2.html" class="cta-button">COFFEE</a>
             </div>
         </body>
     </body>
