--- a/exercises/three-heros/hero1.html
+++ b/exercises/three-heros/hero1.html
@@ -9,8 +9,9 @@
     <body>
         <div id="hero-1">
             <h1>NEW DRINKS</h1>
-            <a href="hero2.html">COFFEE</a>
-            <a href="hero3.html">WATERMELON</a>
+            <p>Discover the amazing new flavors of the world!</p>
+            <a href="hero2.html" class="cta-button">COFFEE</a>
+            <a href="hero3.html" class="cta-button">WATERMELON</a>
         </div>
     </body>
 </html>
