--- a/exercises/three-heros/hero2.html
+++ b/exercises/three-heros/hero2.html
@@ -10,8 +10,9 @@
         <body>
             <div id="hero-2">
                 <h1>NEW DRINKS</h1>
-                <a href="hero1.html">WELLNESS DRINK</a>
-                <a href="hero3.html">WATERMELON</a>
+                <p>Discover the amazing new flavors of the world!</p>
+                <a href="hero1.html" class="cta-button">WELLNESS DRINK</a>
+                <a href="hero3.html" class="cta-button">WATERMELON</a>
             </div>
         </body> 
     </body>
