--- a/about.html
+++ b/about.html
@@ -7,14 +7,17 @@
     <link href="z-css/about.css" rel="stylesheet">
 </head>
 <body>
-    <h1>About Me</h1>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="about.html">About Me</a>
-        <a href="contact.html">Contact</a>   
-    </div>  
-    <hr>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">MyLogo</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="gallery.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
     <header>
         <h1>About Me</h1>
