--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,19 @@
 </head>
 <body>
     <h1>Contact Information</h1>
-    <a href="index.html">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="about.html">About Me</a>
-    <a href="contact.html">Contact</a>
-    <hr>
+    
+    <nav class="navbar">
+      <div class="logo">
+          <a href="index.html">MyLogo</a>
+      </div>
+      <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="gallery.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+      </ul>
+  </nav>
+
     <header>
         <h1>Contact Me</h1>
       </header>
