--- a/gallery.html
+++ b/gallery.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="z-css/gallery.css" rel="stylesheet">
     <title>Gallery</title>
 </head>
 <body>
-    <h1>Gallery</h1>
-    <a href="index.html">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="about.html">About Me</a>
-    <a href="contact.html">Contact</a>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">MyLogo</a>
+        </div>
+        <header>
+            <h1>Portfolio</h1>
+        </header>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="gallery.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
