--- a/gallery.html
+++ b/gallery.html
@@ -11,9 +11,6 @@
         <div class="logo">
             <a href="index.html">MyLogo</a>
         </div>
-        <header>
-            <h1>Portfolio</h1>
-        </header>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about">About</a></li>
@@ -21,5 +18,79 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <header>
+        <h1>Portfolio</h1>
+    </header>
+
+    <section class="gallery">
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project1.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project2.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project3.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="portfolio-item">
+            <img src="z-images/portfolio4.pn" alt="">
+            <a href="z-portfolio/project4.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project5.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project6.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project7.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project8.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project9.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project10.css"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project11.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="portfolio-item">
+            <img src="z-images/" alt="">
+            <a href="z-portfolio/project12.html"><h2>Project 1</h2></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 My Portfolio</p>
+    </footer>
 </body>
 </html>
