--- a/z-portfolio/project3.html
+++ b/z-portfolio/project3.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="z-css/index.css" rel="stylesheet">
-    <title>Home</title>
+    <link href="portfolio.css" rel="stylesheet">
+    <title>Project!</title>
 </head>
 <body>
     <nav class="navbar">
@@ -18,6 +18,9 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <header>
+        <h1>Portfolio</h1>
+    </header>
 
     <footer>
         <p>&copy; 2023 My Home Page</p>
