--- a/gallery.html
+++ b/gallery.html
@@ -24,9 +24,9 @@
 
     <section class="gallery">
         <div class="portfolio-item">
-            <img src="z-images/" alt="">
-            <a href="z-portfolio/project1.html"><h2>Project 1</h2></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <img src="z-images/p" alt="">
+            <a href="z-portfolio/project1.html"><h2>Web Design GUI</h2></a>
+            <p>A simplistic yet bright web design using Adobe XD.</p>
         </div>
 
         <div class="portfolio-item">
