--- a/z-portfolio/project4.html
+++ b/z-portfolio/project4.html
@@ -19,11 +19,33 @@
         </ul>
     </nav>
     <header>
-        <h1>Portfolio</h1>
+        <h1>Style Guide</h1>
     </header>
 
+    <section class="project">
+        <div class="project-details">
+            <h2>Al Patro</h2>
+            <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
+        </div>
+
+        <div class="photo-gallery">
+            <div class="gallery-item">
+                <img src="images/portfolio4-1.png" alt="Graphic Design Project 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio4-2.png" alt="Graphic Design Project 2">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio4-3.png" alt="Graphic Design Project 3">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio4-4.png" alt="Graphic Design Project 3">
+            </div>
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; 2023 My Home Page</p>
+        <p>&copy; 2023 Graci Edinger</p>
     </footer>
 </body>
 </html>
