--- a/z-portfolio/project1.html
+++ b/z-portfolio/project1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
+    <link href="portfolio1img.css" rel="stylesheet">
     <title>Project!</title>
 </head>
 <body>
@@ -19,11 +20,40 @@
         </ul>
     </nav>
     <header>
-        <h1>Portfolio</h1>
+        <h1>Website GUI Design</h1>
     </header>
 
+    <section class="project">
+        <div class="project-details">
+            <h2>Noir Rebellion</h2>
+            <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
+        </div>
+
+        <div class="photo-gallery">
+            <div class="gallery-item">
+                <img src="images/portfolio1-1.png" alt="Graphic Design Project 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio1-2.png" alt="Graphic Design Project 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio1-3.png" alt="Graphic Design Project 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio1-4.png" alt="Graphic Design Project 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio1-5.png" alt="Graphic Design Project 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio1-6.png" alt="Graphic Design Project 1">
+            </div>
+            
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; 2023 My Home Page</p>
+        <p>&copy; 2023 Graci Edinger</p>
     </footer>
 </body>
 </html>
