--- a/z-portfolio/project3.html
+++ b/z-portfolio/project3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
+    <link href="portfolio1img.css" rel="stylesheet">
     <title>Project!</title>
 </head>
 <body>
@@ -19,11 +20,20 @@
         </ul>
     </nav>
     <header>
-        <h1>Portfolio</h1>
+        <h1>Character Concept</h1>
     </header>
+    <section class="project">
+        <div class="project-details">
+            <h2>Homicidal Hopper</h2>
+            <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
+        </div>
 
+        <div class="photo-gallery">
+            <div class="gallery-item">
+                <img src="images/portfolio3-1.png" alt="Graphic Design Project 1">
+            </div>
     <footer>
-        <p>&copy; 2023 My Home Page</p>
+        <p>&copy; 2023 Graci Edinger</p>
     </footer>
 </body>
 </html>
