--- a/about.html
+++ b/about.html
@@ -13,8 +13,9 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="photo.html">Portfolio</a></li>
             <li><a href="about">About</a></li>
-            <li><a href="gallery.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -38,7 +39,10 @@
             <p>Feel free to contact me at <a href="mailto:youremail@example.com">email@email.com</a></p>
         </div>
     </section>
-    
+
+    <footer>
+        <p>&copy; 2023 Graci Edinger</p>
+    </footer>
 
 </body>
 </html>
