--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,18 @@
     <link href="z-css/contact.css" rel="stylesheet">
     <title>Contact</title>
 </head>
-<body>
-    <h1>Contact Information</h1>
-    
+<body>   
     <nav class="navbar">
       <div class="logo">
           <a href="index.html">MyLogo</a>
       </div>
       <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about">About</a></li>
-          <li><a href="gallery.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="photo.html">Portfolio</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
 
     <header>
@@ -41,7 +40,8 @@
           </form>
         </section>
       </main>
-      <footer>Graci Edinger. All rights reserved.</p>
-      </footer>
+      <footer>
+        <p>&copy; 2023 Graci Edinger</p>
+    </footer>
 </body>
 </html>
