--- a/index.html
+++ b/index.html
@@ -13,14 +13,41 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="photo.html">Portfolio</a></li>
             <li><a href="about">About</a></li>
-            <li><a href="gallery.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
+    <header class="hero">
+        <h1 class="hero-title">Welcome to My Creative World</h1>
+        <p class="hero-subtitle">My names Graci and I'm a Graphic Design Student.</p>
+    </header>
+
+    <section class="card-container">
+        <div class="card">
+            <a href="about.html">
+                <h2>About Me</h2>
+                <p>Get to know more about me and my journey as a graphic design student.</p>
+            </a>
+        </div>
+        <div class="card">
+            <a href="portfolio.html">
+                <h2>Portfolio</h2>
+                <p>Explore my portfolio of creative projects and design work.</p>
+            </a>
+        </div>
+        <div class="card">
+            <a href="contact.html">
+                <h2>Contact</h2>
+                <p>Reach out to me for collaboration, questions, or just to say hello!</p>
+            </a>
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; 2023 My Home Page</p>
+        <p>&copy; 2023 Graci Edinger</p>
     </footer>
 </body>
 </html>
