--- a/photo.html
+++ b/photo.html
@@ -134,22 +134,16 @@
             <div class="photo nature" data-tags="nature">
                 <img src="nature1.jpg" alt="">
             </div>
-            <!-- Add more photos with appropriate classes and tags -->
+
         </div>
     </main>
 
-    <section class="thumbnails">
-        <div class="thumbnail landscape" data-tags="landscape">
-            <img src="landscape1.jpg" alt="Thumbnail 1">
-        </div>
-        <div class="thumbnail portrait" data-tags="portrait">
-            <img src="portrait1.jpg" alt="Thumbnail 2">
-        </div>
-        <div class="thumbnail nature" data-tags="nature">
-            <img src="nature1.jpg" alt="Thumbnail 3">
-        </div>
-        <!-- Add more thumbnails with appropriate classes and tags -->
-    </section>
+    <div class="carousel-container">
+        <button id="prev-button">Previous</button>
+        <button id="next-button">Next</button>
+        <div class="carousel">
+
+    </div>
 
     <footer>
         <p>&copy; 2023 Graci Edinger</p>
