photo gallery update 2

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="photo.html">Portfolio</a></li>
+        <li><a href="photo.html">Photo's</a></li>
         <li><a href="about">About</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
