--- a/photo.html
+++ b/photo.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="z-css/photo.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
     <title>Photo Gallery</title>
 </head>
 <body>
@@ -16,133 +14,191 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="photo.html">Photo</a></li>
+            <li><a href="photo.html">Photo's</a></li>
             <li><a href="about">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-
     <header>
-        <h1>Photography Gallery</h1>
+        <h1>Photo Gallery</h1>
     </header>
 
-    <section class="categories">
-        <button class="category active" data-filter="all">All</button>
-        <button class="category" data-filter="beach">Beach</button>
-        <button class="category" data-filter="portrait">Portrait</button>
-        <button class="category" data-filter="nature">Nature</button>
-    </section>
+    <div class="gallery">
+        <div class="tags">
+            <button class="tag-button" data-category="all">All</button>
+            <button class="tag-button" data-category="beach">Beach</button>
+            <button class="tag-button" data-category="animal">Animal's</button>
+        </div>
 
-    <main>
-        <div class="gallery">
-            <div class="photo beach" data-tags="beach">
+        <div class="grid">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach1.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach2.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach3.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach4.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach5.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach6.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach7.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach8.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach9.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach10.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach11.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach12.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach13.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach14.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach15.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach16.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach17.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach18.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach19.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach20.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach21.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach22.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach23.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach24.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach25.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach26.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach27.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach28.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach29.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach30.jpg" alt="">
             </div>
-            <div class="photo beach" data-tags="beach">
+            <div class="gallery-item" data-category="beach">
                 <img src="z-imagesgallery/beach31.jpg" alt="">
             </div>
-            <div class="photo portrait" data-tags="portrait">
-                <img src="portrait1.jpg" alt="">
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal1.jpg" alt="">
             </div>
-            <div class="photo nature" data-tags="nature">
-                <img src="nature1.jpg" alt="">
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal2.jpg" alt="">
             </div>
-
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal6.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal7.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal8.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal9.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal10.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal11.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal12.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal13.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal14.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal15.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal16.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal17.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal18.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal19.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal20.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal21.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal22.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal23.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="aniaml">
+                <img src="z-imagesgallery/animal24.jpg" alt="">
+            </div>
         </div>
-    </main>
 
-    <div class="carousel-container">
-        <button id="prev-button">Previous</button>
-        <button id="next-button">Next</button>
-        <div class="carousel">
-
+    </div>
+    <div class="lightbox">
+        <span class="close-button">&times;</span>
+        <div class="lightbox-content">
+            <img src="" alt="Enlarged Image">
+            <div class="controls">
+                <button id="prev-button">Previous</button>
+                <button id="next-button">Next</button>
+            </div>
+        </div>
     </div>
 
     <footer>
