--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="z-css/gallery.css" rel="stylesheet">
-    <title>Gallery</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <nav class="navbar">
@@ -48,8 +48,8 @@
         </div>
 
         <div class="portfolio-item">
-            <img src="z-images/" alt="">
-            <a href="z-portfolio/project5.html"><h2>Project 1</h2></a>
+            <img src="z-images/project5.png" alt="">
+            <a href="z-portfolio/project5.html"><h2>National Park Poster</h2></a>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
 
