--- a/z-portfolio/project2.html
+++ b/z-portfolio/project2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
     <link href="portfolio1img.css" rel="stylesheet">
-    <title>Project!</title>
+    <title>Photo Bashing Project</title>
 </head>
 <body>
     <nav class="navbar">
@@ -13,10 +13,11 @@
             <a href="index.html">MyLogo</a>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="gallery.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/portfolio.html">Portfolio</a></li>
+            <li><a href="/photo.html">Photo's</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
     <header>
@@ -32,7 +33,6 @@
             <div class="gallery-item">
                 <img src="images/portfolio2-1.jpg" alt="Graphic Design Project 1">
             </div>
-    <footer>
     <footer>
         <p>&copy; 2023 Graci Edinger</p>
     </footer>
