--- a/z-portfolio/project4.html
+++ b/z-portfolio/project4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
-    <title>Project!</title>
+    <title>Style Guide</htitle>
 </head>
 <body>
     <nav class="navbar">
@@ -12,10 +12,11 @@
             <a href="index.html">MyLogo</a>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="gallery.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/portfolio.html">Portfolio</a></li>
+            <li><a href="/photo.html">Photo's</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
     <header>
