--- a/z-portfolio/project5.html
+++ b/z-portfolio/project5.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
-    <title>Project!</title>
+    <link href="portfolio1img.css" rel="stylesheet">
+    <title>National Park Poster</title>
 </head>
 <body>
     <nav class="navbar">
@@ -12,16 +13,27 @@
             <a href="index.html">MyLogo</a>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="gallery.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/portfolio.html">Portfolio</a></li>
+            <li><a href="/photo.html">Photo's</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
     <header>
-        <h1>Portfolio</h1>
+        <h1>National Park Poster</h1>
     </header>
+    <section class="project">
+        <div class="project-details">
+            <h2>project</h2>
+            <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
+        </div>
 
+        <div class="photo-gallery">
+            <div class="gallery-item">
+                <img src="images/portfolio5-1.png" alt="Graphic Design Project 1">
+            </div>
+        </div>
     <footer>
         <p>&copy; 2023 My Home Page</p>
     </footer>
