--- a/z-portfolio/project6.html
+++ b/z-portfolio/project6.html
@@ -12,16 +12,27 @@
             <a href="index.html">MyLogo</a>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="gallery.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/portfolio.html">Portfolio</a></li>
+            <li><a href="/photo.html">Photo's</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
     <header>
-        <h1>Portfolio</h1>
+        <h1>Project</h1>
     </header>
+    <section class="project">
+        <div class="project-details">
+            <h2>project</h2>
+            <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
+        </div>
 
+        <div class="photo-gallery">
+            <div class="gallery-item">
+                <img src="images/portfolio" alt="Graphic Design Project 1">
+            </div>
+        </div>
     <footer>
         <p>&copy; 2023 My Home Page</p>
     </footer>
