--- a/z-portfolio/project9.html
+++ b/z-portfolio/project9.html
@@ -12,10 +12,11 @@
             <a href="index.html">MyLogo</a>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="gallery.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/portfolio.html">Portfolio</a></li>
+            <li><a href="/photo.html">Photo's</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
     <header>
