--- a/exercises/nav-bars/index2.html
+++ b/exercises/nav-bars/index2.html
@@ -22,5 +22,21 @@
                 </div>
             </nav>
         </header>
+
+        <div class="spacer">
+            <br>
+        </div>
+
+        <footer class="footer">
+            <div class="footer-content">
+                <p>&copy; 2023 AngelEars</p>
+                <ul class="footer-links">
+                    <li><a href="index3.html">Home</a></li>
+                    <li><a href="index3.html">About Us</a></li>
+                    <li><a href="index3.html">Services</a></li>
+                    <li><a href="index3.html">Contact</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
